fixed flexbox for map and about

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </g>
       </svg>
     </div>
-    <div class="flex about">
+    <div class="about">
       <div>
         <h1>About</h1>
       </div>
